# ipref-py

./: .gitignore  .goreleaser.yml  CHANGELOG.md  MANIFEST.in  README.md  config.yaml.orig  ipref-web.service  nginx.conf  setup.cfg
.github/workflows/: release.yml  test.yaml
ipref/: __init__.py  __main__.py  config-geolite.yaml.orig  config.py  config.yaml.orig  lookup.py  util.py  web.py
ipref/data/: dns.py  geoip.py
ipref/templates/: base.html  search.html
tests/: conftest.py  test_config.py  test_data_dns.py  test_data_geoip.py  test_lookup.py  test_util.py  test_web.py
tests/data/: README.md  ip-list.txt
tests/etc/: config-full.yaml  config.yaml  test-config.yaml
