# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = ipref
version = attr: ipref.__init__.__version__
author = mkt
author_email = md.irohas@gmail.com
description = IP Address Lookup Utility (Hostname, MaxMind GeoIP2).
long_description = file: README.md
long_description_content_type = text/markdown
# url = [CHANGE-ME]
# project_urls =
#    Bug Tracker = [CHANGE-ME]https://github.com/.../issues

# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages =
    ipref
python_requires = >=3.7

#### library ####
install_requires=
    dnspython
    geoip2
    pyyaml

#### dev/doc ####
[options.extras_require]
web =
    Flask
dev =
    pytest
    flake8
    black
    isort

[options.entry_points]
console_scripts =
    ipref = ipref.__main__:main

[flake8]
max-line-length = 127
max-complexity = 10
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    env

[isort]
profile = black

[coverage:run]
omit = */__main__.py

[tool:pytest]
addopts = --cov=./ipref/
