# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = ipref
version = attr: ipref.__init__.__version__
author = mkt
author_email = md.irohas@gmail.com
description = IP Address Lookup Utility (Hostname, MaxMind GeoIP2).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/md-irohas/ipref-py
project_urls =
   Bug Tracker = https://github.com/md-irohas/ipref-py/issues

# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    ipref
    ipref.data
include_package_data = True
python_requires = >=3.7

#### library ####
install_requires=
    dnspython
    geoip2
    pyyaml

#### dev/doc ####
[options.extras_require]
web =
    Flask
    gunicorn
    emoji-country-flag
dev =
    pytest
    pytest-cov
    flake8
    black
    isort
    wheel

[options.entry_points]
console_scripts =
    ipref = ipref.__main__:main
    ipref-web = ipref.web:run_dev

[flake8]
max-line-length = 127
max-complexity = 10
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    env

[isort]
profile = black

[coverage:run]
omit = */__main__.py

[tool:pytest]
addopts = --cov=./ipref/
